# competition-cpp-parallel-indexing

./: .todo  CMakeLists.txt  Event.hpp  Index.hpp  JoiningThread.hpp  README.md  Reader.cpp  Reader.hpp  Word.cpp  Word.hpp  Writer.cpp  Writer.hpp  benchmark.cpp  buildIndex.hpp  getRandomWords.cpp  getRandomWords.hpp  readFileAsLines.cpp  readFileAsLines.hpp  word_list_generator.cpp
Impl/: MyIndex.cpp  MyIndex.hpp  buildIndex.cpp  types.hpp
simple_test_data/: pl_10.txt  pl_10k.txt  pl_1k.txt
